--- a/Cefalo.InfedgeBlog.Api/appsettings.json
+++ b/Cefalo.InfedgeBlog.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SHOAIB-AHMED\\SQLEXPRESS;Database=InfedgeDotNet;Trusted_Connection=True;;TrustServerCertificate=True"
+  }
 }
