--- a/Cefalo.InfedgeBlog.Api/appsettings.json
+++ b/Cefalo.InfedgeBlog.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SHOAIB-AHMED\\SQLEXPRESS;Database=InfedgeDotNet;Trusted_Connection=True;;TrustServerCertificate=True"
+    "DefaultConnection": "Server=SHOAIB-AHMED\\SQLEXPRESS;Database=InfedgeDotNet;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
