Add jwt token and authorize protection

--- a/Cefalo.InfedgeBlog.Api/appsettings.json
+++ b/Cefalo.InfedgeBlog.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=SHOAIB-AHMED\\SQLEXPRESS;Database=InfedgeDotNet;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "AppSettings": {
+    "Token": "infedgeblogcefalo"
   }
 }
