Add story and user route protection

--- a/Cefalo.InfedgeBlog.Service/Cefalo.InfedgeBlog.Service.csproj
+++ b/Cefalo.InfedgeBlog.Service/Cefalo.InfedgeBlog.Service.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Cefalo.InfedgeBlog.Repository\Cefalo.InfedgeBlog.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\Validators\" />
+  </ItemGroup>
+
 </Project>
