--- a/Cefalo.InfedgeBlog.Service/Cefalo.InfedgeBlog.Service.csproj
+++ b/Cefalo.InfedgeBlog.Service/Cefalo.InfedgeBlog.Service.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="FluentValidation" Version="11.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
@@ -22,10 +23,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Cefalo.InfedgeBlog.Database\Cefalo.InfedgeBlog.Database.csproj" />
     <ProjectReference Include="..\Cefalo.InfedgeBlog.Repository\Cefalo.InfedgeBlog.Repository.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Dtos\Validators\" />
   </ItemGroup>
 
 </Project>
