--- a/Cefalo.InfedgeBlog.Api/appsettings.json
+++ b/Cefalo.InfedgeBlog.Api/appsettings.json
@@ -9,6 +9,28 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=SHOAIB-AHMED\\SQLEXPRESS;Database=InfedgeDotNet;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+        }
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ]
+  },
   "AppSettings": {
     "Token": "infedgeblogcefalo"
   }
