--- a/Cefalo.InfedgeBlog.Service.UnitTests/Cefalo.InfedgeBlog.Service.UnitTests.csproj
+++ b/Cefalo.InfedgeBlog.Service.UnitTests/Cefalo.InfedgeBlog.Service.UnitTests.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="FakeItEasy" Version="7.4.0" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
+    <PackageReference Include="Serilog" Version="3.0.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.5.0" />
     <PackageReference Include="xunit.extensibility.core" Version="2.5.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
